# crmpwp

./: .coverage  .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  UsedCmds.txt  db_readme.md  docker-compose.yml  main.py  postman_collection.json  pyproject.toml
.github/: dependency-review-config.yml
.github/workflows/: ai_code_review.yml  auto_fix.yml  ci-cd.yml  code-quality.yml  code_audit.yaml  docker-build.yml
companies/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_initial.py  0003_alter_company_inn.py
companies/templates/companies/: company_list.html
contacts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_initial.py  0003_contact_is_email_verified_contact_is_phone_verified.py
contacts/templates/contacts/: contact_list.html
crm/: __init__.py  admin.py  asgi.py  celery.py  settings.py  tasks.py  urls.py  utils.py
crm/management/commands/: create_test_data.py  generate_test_data.py  initialize_system.py
crm/templates/crm/: base.html  dashboard.html  index.html
crm/templates/crm/partials/: navpanel.html
emails/: admin.py  forms.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
emails/migrations/: 0001_initial.py  0002_initial.py
emails/templates/emails/: credentials.html  email_list.html
emails/templates/emails/partials/: exchsettings_form.html  processingrules.html  settingshelp.html  synclogs.html  syncstatus.html  testconnection_form.html
projects/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_initial.py  0003_alter_project_inn.py
projects/templates/projects/: project_list.html
static/css/: styles.css
static/js/: base_js.js  dashboard.js  emailcredent.js  emails.js  settings.js  websocket.js
templates/: base.html  dashboard.html  index.html  mobilemenu.html  navmenu.html
templates/emails/: credentials.html  email_list.html
templates/partials/: maincontent.html  messages.html  mobilemenu.html  navmenu.html  navpanel.html
tests/: conftest.py  test_companies.py  test_contacts.py  test_emails.py  test_integration.py  test_projects.py  test_users.py
tests/UI/users/html/: components.md
tests/prompts/: Homepage.txt  apps_details.txt  exchange_acc_add.txt  templates_create.txt  users_adds.txt
users/: adapters.py  admin.py  allauth_forms.py  api_urls.py  api_views.py  consumers.py  forms.py  managers.py  models.py  permissions.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  views.py
users/management/commands/: create_test_data.py  generate_test_data.py  initialize_system.py
users/migrations/: 0001_initial.py
users/templates/users/: settings.html
users/templates/users/partials/: login.html  profile.html  register.html  user_detail.html  user_list.html
